[gd_scene load_steps=9 format=3 uid="uid://cgiurci8latx4"]

[ext_resource type="PackedScene" uid="uid://d333dqdpbo1ps" path="res://scenes/player.tscn" id="1_8ernn"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_wivhb"]
[ext_resource type="Script" path="res://scenes/game_manager.gd" id="2_23ond"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rp5gu"]

[sub_resource type="Curve2D" id="Curve2D_qps6h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 325)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_gyhuu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1151, 325, 0, 0, 0, 0, 1151, 0)
}
point_count = 2

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_354a6"]
normal = Vector2(1, 0)
distance = -1.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7tlsf"]
normal = Vector2(-1, 0)
distance = -1.0

[node name="Game" type="Node2D"]
script = ExtResource("1_wivhb")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_23ond")

[node name="Player" parent="." instance=ExtResource("1_8ernn")]
z_index = 5
position = Vector2(582, 648)

[node name="Floor" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(582, 649)
shape = SubResource("WorldBoundaryShape2D_rp5gu")

[node name="FishSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Fish" type="Node" parent="."]

[node name="FishSpawnLeft" type="Path2D" parent="."]
curve = SubResource("Curve2D_qps6h")

[node name="SpawnLocation" type="PathFollow2D" parent="FishSpawnLeft"]
rotation = 1.5708

[node name="FishSpawnRight" type="Path2D" parent="."]
curve = SubResource("Curve2D_gyhuu")

[node name="SpawnLocation" type="PathFollow2D" parent="FishSpawnRight"]
position = Vector2(1151, 325)
rotation = -1.5708

[node name="Walls" type="Node2D" parent="."]

[node name="Left" type="StaticBody2D" parent="Walls"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
position = Vector2(0, 291)
shape = SubResource("WorldBoundaryShape2D_354a6")

[node name="Right" type="StaticBody2D" parent="Walls"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2(1153, 319)
shape = SubResource("WorldBoundaryShape2D_7tlsf")

[connection signal="timeout" from="FishSpawnTimer" to="." method="_on_fish_spawn_timer_timeout"]
